--- a/SBAdmin/SBAdmin/app/views/menu/supplier/update.html
+++ b/SBAdmin/SBAdmin/app/views/menu/supplier/update.html
@@ -1,1 +1,73 @@
-﻿
+﻿<div id="page-wrapper" ng-controller="supplierCtrl">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Nhà cung cấp<small><span class="glyphicon glyphicon-chevron-right"></span>Sửa</small></h1>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        <div style="width:90%" class="row center-block">
+            <form role="form" class="form-horizontal" name="createForm">
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="username">Tài khoản:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="username" name="username" ng-model="spUpdate.UserName" placeholder="Nhập tài khoản" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="pw">Mật khẩu:</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="pw" name="pw" ng-model="spUpdate.Password" placeholder="Nhập mật khẩu" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="name">Tên nhà cung cấp:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="name" name="name" ng-model="spUpdate.Name" placeholder="Nhập tên nhà cung cấp" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="mobile">Điện thoại:</label>
+                    <div class="col-sm-10">
+                        <input class="form-control" name="mobile" type="text" ng-model="spUpdate.Mobile" placeholder="Nhập số điện thoại" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="email">Email:</label>
+                    <div class="col-sm-10">
+                        <input class="form-control" name="email" type="email" ng-model="spUpdate.Email" placeholder="Nhập email" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="address">Địa chỉ:</label>
+                    <div class="col-sm-10">
+                        <input class="form-control" name="address" type="text" ng-model="spUpdate.Address" placeholder="Nhập địa chỉ" />
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button class="btn btn-primary" ng-click="update(spUpdate)">Submit</button>
+                        <a class="btn btn-default pull-right" href="#/dai-ly">Hủy bỏ</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!-- /.row -->
+    </div>
+</div>
+<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Đang xử lý...</h4>
+            </div>
+            <div class="modal-body">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
