--- a/SBAdmin/Views/Home/Index.cshtml
+++ b/SBAdmin/Views/Home/Index.cshtml
@@ -142,6 +142,7 @@
     <script src="~/SBAdmin/app/customServices/crud.js"></script>
     <script src="~/SBAdmin/app/controllers/appCtrl.js"></script>
     <script src="~/SBAdmin/app/controllers/menu/networkCtrl.js"></script>
+    <script src="~/SBAdmin/app/controllers/menu/supplierCtrl.js"></script>
     <script src="~/SBAdmin/app/ngmodules/angular-route.js"></script>
     <script>
         var signedIn = "@ViewBag.SignedIn";
