--- a/SBAdmin/SBAdmin/app/views/menu/supplier/index.html
+++ b/SBAdmin/SBAdmin/app/views/menu/supplier/index.html
@@ -1,1 +1,51 @@
-﻿
+﻿<div id="page-wrapper" ng-controller="supplierCtrl">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Danh sách nhà cung cấp</h1>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        <div class="row" style="padding:20px 50px 50px 100px">
+            <table class="table table-responsive table-hover table-condensed">
+                <thead>
+                    <tr>
+                        <th class="text-center">Tên NCC</th>
+                        <th class="text-center">Điện thoại</th>
+                        <th class="text-center">Email</th>
+                        <th class="text-center">Địa chỉ</th>
+                        <th class="text-center">Ngày tạo</th>
+                        <th class="text-center">Trạng thái</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="sp in lstSupplier|filter:{isDeleted:false}|orderBy:'Name'">
+                        <td class="text-center" style="vertical-align:middle">{{sp.Name}}</td>
+                        <td class="text-center" style="vertical-align:middle">{{sp.Mobile}}</td>
+                        <td class="text-center" style="vertical-align:middle">{{sp.Email}}</td>
+                        <td class="text-center" style="vertical-align:middle">{{sp.Address}}</td>
+                        <td class="text-center" style="vertical-align:middle">{{sp.CreateDate|date:"dd/MM/yyyy"}}</td>
+                        <td class="text-center" style="vertical-align:middle">
+                            <span class="fa fa-lg fa-unlock" ng-show="sp.isActive" title="Hoạt động"></span>
+                            <span class="fa fa-lg fa-lock" ng-hide="sp.isActive" title="Khóa"></span>
+                        </td>
+                        <td class="text-right" style="vertical-align:middle">
+                            <span class="pull-right control-btn">
+                                <a role="button" href="#/dai-ly/sua/{{sp.ID}}" class="btn btn-primary btn-xs">
+                                    <span class="glyphicon glyphicon-edit" title="Sửa"></span> Sửa
+                                </a>
+                                <button type="button" ng-click="remove(sp)" class="btn btn-danger btn-xs">
+                                    <span class="glyphicon glyphicon-remove" title="Xóa"></span> Xóa
+                                </button>
+                            </span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <a href="#/dai-ly/them" class="btn btn-success">Tạo mới</a>
+            <!--<input class="pull-right" />-->
+        </div>
+        <!-- /.row -->
+    </div>
+</div>
