add order table to db and completed sim controller

--- a/SBAdmin/Views/Home/Index.cshtml
+++ b/SBAdmin/Views/Home/Index.cshtml
@@ -144,6 +144,7 @@
     <script src="~/SBAdmin/app/controllers/menu/networkCtrl.js"></script>
     <script src="~/SBAdmin/app/controllers/menu/supplierCtrl.js"></script>
     <script src="~/SBAdmin/app/controllers/menu/simtypeCtrl.js"></script>
+    <script src="~/SBAdmin/app/controllers/menu/simCtrl.js"></script>
     <script src="~/SBAdmin/app/ngmodules/angular-route.js"></script>
     <script>
         var signedIn = "@ViewBag.SignedIn";
