--- a/SBAdmin/SBAdmin/app/views/menu/network/index.html
+++ b/SBAdmin/SBAdmin/app/views/menu/network/index.html
@@ -31,7 +31,7 @@
                         </td>
                         <td class="text-left" style="vertical-align:middle">
                             <span class="control-btn">
-                                <a role="button" href="#/thiet-lap-danh-muc/nha-mang/sua/{{nw.ID}}" ng-click="preUpdate(nw.ID)" class="btn btn-primary btn-xs">
+                                <a role="button" href="#/thiet-lap-danh-muc/nha-mang/sua/{{nw.ID}}" class="btn btn-primary btn-xs">
                                     <span class="glyphicon glyphicon-edit" title="Sửa"></span> Sửa
                                 </a>
                                 <button type="button" ng-click="remove(nw)" class="btn btn-danger btn-xs">
