--- a/SBAdmin/SBAdmin/app/views/authentication/authentication.html
+++ b/SBAdmin/SBAdmin/app/views/authentication/authentication.html
@@ -8,10 +8,10 @@
 </ul>
 <ul class="dropdown-menu dropdown-user" ng-show="currentUser()">
     <li>
-        <a href="#/profile" ng-click="userProfile()"><i class="fa fa-user fa-fw"></i> User Profile</a>
+        <a href="#/profile"><i class="fa fa-user fa-fw"></i> User Profile</a>
     </li>
     <li>
-        <a href="#/manageUser" ng-show="currentUser().IsAdmin"><i class="fa fa-users fa-fw"></i> Manage Users</a>
+        <a href="#/setting"><i class="fa fa-gear fa-fw"></i> Setting</a>
     </li>
     <li class="divider"></li>
     <li>
